# GPT-SoVITS

./: CPU.md  pyproject.toml
GPT_SoVITS/: inference.py  s1_train.py  s2_train.py
GPT_SoVITS/prepare_datasets/: 1-get-text.py  2-get-hubert-wav32k.py  3-get-semantic.py
