[tool.poetry]
name = "gpt-sovits-cpu"
version = "0.1.0"
description = ""
authors = ["elvuel <elvuel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
scipy = "^1.12.0"
tensorboard = "^2.16.2"
librosa = "0.9.2"
pytorch-lightning = "^2.2.1"
gradio = "3.38.0"
gradio-client = "0.8.1"
ffmpeg-python = "^0.2.0"
onnxruntime = "^1.17.1"
tqdm = "^4.66.2"
funasr = "1.0.0"
cn2an = "^0.5.22"
pypinyin = "^0.51.0"
pyopenjtalk = "^0.3.3"
g2p-en = "^2.1.0"
torchaudio = "^2.2.1"
modelscope = "1.10.0"
sentencepiece = "^0.2.0"
transformers = "^4.38.2"
chardet = "^5.2.0"
pyyaml = "^6.0.1"
psutil = "^5.9.8"
jieba-fast = "^0.53"
jieba = "^0.42.1"
langsegment = ">=0.2.0"
faster-whisper = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
